nx-libs (2:3.5.0.11-0) UNRELEASED; urgency=low

  * Use ,,make -C'' in main Makefile for calling Makefiles in subdirectories.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 07 Feb 2012 13:48:19 +0100

nx-libs (2:3.5.0.10-0) unstable; urgency=low

  * Add patch: 006_nxcomp_libpng15.full+lite.patch, fix build against
    libpng 1.5.x.
  * Reintroduce patch: 008_nxcomp_sa_restorer.full+lite.patch, now in a
    version found on etersoft.ru, fixes build on ia64 architecture.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 07 Feb 2012 13:43:50 +0100

nx-libs (2:3.5.0.9-0) unstable; urgency=low

  [ Mike Gabriel ]
  * Providing pending patches in source tree.

  [ Oleksandr Shneyder ]
  * Update patch: 202_nx-x11_enable-xinerama.full.patch, disable Xinerama
    extension if NX_XINERAMA_CONF not exists.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 01 Feb 2012 14:39:57 +0100

nx-libs (2:3.5.0.8-0) unstable; urgency=low

  * Reorganize patch names, to reflect patch inclusion into lite+full or
    full-only ,,NX (redistributed)'' tarball.
  * Update patch: 001_add-main-makefile.full+lite.patch, only build, install,
    clean etc. NX subprojects if the folder exists.
  * Package x2goagent is an ,,all'' package, not ,,any''.
  * Add folder /debian/patches-pending-evaluation with two newly discovered
    patches from git.etersoft.ru (AltLinux packaging repository for NX).
  * Fix patch: 109_nxagent_locale-utf8-compound-text.patch, fix crashes
    reported from Stefan Baur. Thanks for reporting and testing!!!

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Sun, 22 Jan 2012 23:36:19 +0100

nx-libs (2:3.5.0.7-0) unstable; urgency=low

  * Drop patch: 011_nxcomp_sa-restorer.patch.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 16 Jan 2012 11:28:14 +0100

nx-libs (2:3.5.0.6-0) unstable; urgency=low

  * Add patch: 202_nx-x11_enable-xinerama.patch.
  * Fix lintian issue: missing-separator-between-items for x2goagent package.